# MAI

./: README.md
LP/: README.md
LP/lab1/: REPORT.md  task1.pl  task2.pl  tree.pl
LP/lab2/: REPORT.md  solution.pl
LP/lab3/: REPORT.md
LP/lab4/: REPORT.md
OS/lab1/: n_1.c  n_2.c  n_3.c  n_4.c
OS/lab2/: n_1.c
lab1/: n_1.c
mp/lab1/: n4.c  n_1.c  n_10.c  n_2.c  n_3.c  n_4.c  n_5.c  n_6.c  n_7.c  n_8.c
mp/lab1/n_9/: n_9_1.c  n_9_2.c
mp/lab2/: n_1.c  n_10.c  n_2.c  n_3.c  n_4.c  n_7.c  n_8.c  n_9.c  num1.c
mp/lab2/lab5/: flags.c  functions.c  lab.h  main.c
mp/lab2/lab6/: flags.c  functions.c  main.c  n_6.h
mp/lab2/n_5/: h.c  main.c  new.c
mp/lab2/untitled/: 3.5.c  4_7.c  z.c
mp/lab3/: n_1.c  n_10.c  n_2.c  n_3.c  n_5.c  n_9.c
mp/lab3/n_4/: n_4_1.c
mp/lab4/: 8.c  lab4_6.c  n_1.c  n_5.c  n_5_new_var.c  n_6.c  n_7.c  n_8.c  n_9.c  new.cpp  new7.c
mp/lab4/4_5/: main.c  main.h  solve.c  solve.h  stack.c  stack.h
mp/lab4/n_9/: CMakeLists.txt  binary_heap.c  binary_heap.h  binomial_heap.c  binomial_heap.h  fibonacci_heap.c  fibonacci_heap.h  logger  logger.c  logger.h  main  main.c  main.h  n_9.txt  n_9_requests.txt  n_9_requests_2.txt  time.txt
mp/lab4/n_9/heaps/: binary_heap.c  binary_heap.h  binomial_heap.h  fibonacci_heap.c  fibonacci_heap.h
mp/lab4/n_9/storages/: binary_search_tree.c  binary_search_tree.h  dynamic_array.c  dynamic_array.h  hash_set.c  hash_set.h
oc/lab1/: n_1.c
os/lab1/: n_1.c  n_2.c  n_3.c  n_4.c
os/lab2/: n_1.c  n_3.c  n_5.c
